# Swiftaid-AI

./: README copy.md  README.md  promtpt
drlead/: .env  config.py  main.py  pyproject.toml
drlead/app/: __init__.py  gen.py  models.py  routes.py  scoring.py
drlead/app/templates/: form.html
drlead/scripts/: seed_data.py
python/: app.py  lead_data.xlsx
src/app/api/preferences/model/: route.ts
swiftaid/: .env.local  .gitignore  next.config.ts  package-lock.json  package.json
swiftaid/src/: scripts.ts
swiftaid/src/app/: layout.tsx  page.tsx  providers.tsx
swiftaid/src/app/admin/analysis/: page.tsx
swiftaid/src/app/admin/preferences/: page.tsx
swiftaid/src/app/api/analytics/: route.ts
swiftaid/src/app/api/create-test-user/: route.ts
swiftaid/src/app/api/preferences/: route.ts
swiftaid/src/app/auth/error/: page.tsx
swiftaid/src/app/auth/login/: page.tsx
swiftaid/src/app/auth/signup/: page.tsx
swiftaid/src/app/create-test-user/: page.tsx
swiftaid/src/app/email-tracking/: page.tsx
swiftaid/src/app/explore/: page.tsx
swiftaid/src/app/preferences/: page.tsx
swiftaid/src/components/: GoogleAnalytics.tsx  MainLayout.tsx
swiftaid/src/components/analytics/: GoogleAnalytics.tsx
swiftaid/src/components/forms/: PreferencesForm.tsx
swiftaid/src/components/layout/: MainLayout.tsx
swiftaid/src/lib/: analytics.ts  email.ts  emailTracking.ts  gemini.ts  mongodb.ts
swiftaid/src/lib/actions/: emailActions.ts
swiftaid/src/lib/analytics/: ga4.ts
swiftaid/src/types/: email.ts  preferences.ts
swiftaid/src/utils/: csvGenerator.ts
(+9 files in other folders)
